--- a/example/CMakeLists.txt
+++ b/example/CMakeLists.txt
@@ -1,5 +1,9 @@
 add_executable(intbuilder_example
 	example.cpp
+	JitHelpers.cpp
+	JitHelpers.hpp
+	JitTypes.cpp
+	JitTypes.hpp
 )
 
 target_link_libraries(intbuilder_example
